unpackaged/main/default/objects/npe4__Relationship_Lookup__c/npe4__Relationship_Lookup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <label>Relationship Lookup</label>
</CustomObject>