unpackaged/main/default/objects/npe4__Relationship_Lookup__c/fields/npe4__Active__c.field-meta.xml
<CustomField>
    <fullName>npe4__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this reciprocal lookup is active.</description>
    <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>