unpackaged/main/default/objects/npe4__Relationship_Lookup__c/fields/npe4__Neutral__c.field-meta.xml
<CustomField>
    <fullName>npe4__Neutral__c</fullName>
    <description>The value used if the Contact's gender field does not match either the Male or Female Custom Labels, and the Contact's salutation does not infer gender.</description>
    <inlineHelpText>The value used if the Contact's gender field does not match either the Male or Female Custom Labels, and the Contact's Salutation does not infer gender.</inlineHelpText>
    <label>Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>